# bkw

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
bkw_py/: README.md  _cancel.py  bkw.py  ispbkw.py  tdf.py  userbkw.py
bkw_py/core/: detonation.py  eos.py  equil.py  fitting.py  isp.py  solvers.py  thermo.py
bkw_py/data/: ZZZCOMPS  ZZZSOLEQ  ZZZTHERC
bkw_py/data/templates/: CHNF  CHNO  CHNOAL  CHNOB  CHNOCL  CHNOCLAL  CHNOCLP  CHNOF  CHNOFAL  CHNOFB  CHNONAAL  CHNONAAN  CHNOS  CHNOSIW  CNO  HNO  HNOCL  bfacid
bkw_py/io/: bkwdata.py  database.py  reference_io.py
bkw_py/ui/: userbkw.py
bkw_ui/: README.md  main.py
bkw_ui/bkw_ui_app/: app.py  models.py  paths.py
bkw_ui/bkw_ui_app/i18n/: __init__.py  core.py  strings.py
bkw_ui/bkw_ui_app/services/: calc_runner.py  data_service.py  output_parse.py  project_service.py  (+3 more)
bkw_ui/tdf_engine/: TDFFILES.txt  tdfdata.default
docs/: release-notes-v0.9.0.md  release-notes-v0.9.1.md
scripts/: make_icon.py  package-linux.sh  package-macos.sh  package-windows.ps1
tests/: test_output_format_parity.py  test_paths.py  test_stage3_golden.py  test_stage4_sys3.py  test_stage4_sys4a_sys5.py  test_stage5_isp.py  test_stage6_e2e.py  test_stage6_userbkw_cli.py  test_stage6_userbkw_complex.py  test_stage6_userbkw_legacy_cli_noninteractive.py  test_stage6_userbkw_legacy_p01.py  test_stage6_userbkw_legacy_p3b.py  test_stage6_userbkw_legacy_p56.py  test_stage6_userbkw_menu_exotic.py  test_stage6_userbkw_mix.py  test_tdf_plot_images.py  test_ui_e2e_smoke.py  test_ui_graphs_resilience.py
(+2 files in other folders)
