[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bkw"
version = "0.9.0"
description = "BKW: Becker-Kistiakowsky-Wilson detonation thermodynamics calculator"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    "matplotlib>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[project.scripts]
bkw      = "bkw_py.bkw:main"
ispbkw   = "bkw_py.ispbkw:main"
userbkw  = "bkw_py.userbkw:main"
tdf      = "bkw_py.tdf:main"
bkw-ui   = "bkw_ui_app.app:run"

[tool.setuptools.packages.find]
where = [".", "bkw_ui"]
include = ["bkw_py*", "bkw_ui_app*"]

[tool.setuptools.package-data]
bkw_py = ["data/*", "data/templates/*"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
